# OpenAgent

./: .env.example  .gitignore  README.md  openagent.spec  openagent.yaml.example  pyproject.toml
.claude/: launch.json
app/desktop/: package.json
buildResources/: computer-control-Info.plist  entitlements.mac.plist
desktop/: README.md
mcps/computer-use/: package.json
mcps/shell/: package.json
openagent/: __init__.py  _frozen.py  agent.py  bootstrap.py  cli.py  config.py  runtime.py  scheduler.py  server.py  updater.py
openagent/bridges/: base.py  discord.py  telegram.py  whatsapp.py
openagent/channels/: __init__.py  base.py  commands.py  discord.py  formatting.py  senders.py  telegram.py  voice.py  websocket.py  whatsapp.py
openagent/core/: __init__.py  agent.py  config.py  logging.py  paths.py  prompts.py  scheduler.py  serve_singleton.py  server.py
openagent/gateway/: server.py  sessions.py
openagent/gateway/api/: _common.py  config.py  control.py  logs.py  mcps.py  models.py  providers.py  scheduled_tasks.py  sessions.py  usage.py  workflow_tasks.py
openagent/mcp/: __init__.py  builtins.py  client.py  pool.py
openagent/mcp/servers/: _common.py
openagent/mcp/servers/computer-control/: .gitignore  Cargo.toml
openagent/mcp/servers/computer-control/src/: capture.rs  input.rs  keys.rs  main.rs  record.rs  scaling.rs  tool.rs
openagent/mcps/messaging/: server.py
openagent/mcps/scheduler/: server.py
openagent/memory/: __init__.py  bootstrap.py  db.py  knowledge.py  manager.py
openagent/models/: __init__.py  agno_provider.py  base.py  catalog.py  claude_api.py  claude_cli.py  default_pricing.json  discovery.py  litellm_provider.py  runtime.py  smart_router.py  zhipu.py
openagent/network/: __init__.py  bridge_session.py  cli_commands.py  coordinator_addr_cache.py  iroh_node.py  peers.py  state.py  ticket.py  user_store.py
openagent/scripts/: setup.sh
openagent/setup/: __init__.py  bootstrap.py  installer.py
openagent/stream/: channel.py  session.py
openagent/workflow/: __init__.py  examples.py  executor.py  validate.py
scripts/: install.sh  package-release.sh  sign-notarize-macos.sh  start.sh  test_openagent.py  test_openagent.sh
scripts/tests/: __init__.py  _framework.py  _setup.py  test_agno.py  test_agno_tool_filter.py  test_barge_in_commit.py  test_behavior_contract.py  test_bootstrap.py  test_bootstrap_import.py  test_bridge_session.py  test_bridges.py  test_budget.py  test_buffer_size.py  test_catalog.py  test_channels.py  test_claude_cli.py  test_claude_cli_connect_cleanup.py  test_claude_cli_registry.py  test_claude_cli_text_recovery.py  test_cli_cleanup.py  test_computer_control_native.py  test_cron.py  test_db_mcps.py  test_db_models.py  test_db_providers.py  test_db_session_bindings.py  test_db_workflow_claim.py  test_dream.py  test_files.py  test_formatting.py  test_gateway.py  test_gateway_commands.py  test_imports.py  test_mcp.py  test_mcp_manager_guards.py  test_mcp_pool_resilience.py  test_mcps_rest.py  test_models.py  test_models_discovery.py  test_pool.py  (+16 more)
tests/: test_runtime.py  test_shutdown.py
(+32 files in other folders)
